# nonosql

./: .gitignore  COPYING  MANIFEST.in  README.md  pyproject.toml
.github/workflows/: pypi.yml
src/nonosql/: __init__.py
